# CourseSlideGenerator

./: Harness engineering for coding agent users (2026_6_2 下午11：55：13).html  README.md  Skill責任分工.txt  article_to_presentation_structure_skill.txt  index.html  package-lock.json  package.json  presentation_generation_skill.txt  render.yaml  tsconfig.json  vite.config.ts  教學簡報產生器.txt
docs/: 01-架構與資料模型.md  02-複製與改寫清單.md  03-桌面打包評估-Tauri-vs-Electron.md  04-物件樹Schema與AI版型映射.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  AudioPanel.tsx  ExportPanel.tsx  GeneratePanel.tsx  ImagePanel.tsx  ImportPanel.tsx  LibraryPanel.tsx  OnboardingPanel.tsx  PresentationPlayer.tsx  SettingsPanel.tsx  SnapshotsPanel.tsx  onboarding.ts
src/editor/: EditorCanvas.tsx  Inspector.tsx  SelectionOverlay.tsx  SlidePanel.tsx  TextAutoSizer.tsx  Toolbar.tsx  geometry.ts
src/engine/ai/: generate.ts  image-placement.ts  image.ts  outline-coverage.ts  paragraph-analysis.ts  presentation-generate.ts  presentation-structure-types.ts  presentation-structure.ts  slide-briefs.ts  title-refine.ts  visual-preset-map.ts
src/engine/export/: download.ts  html.ts  image.ts  pptx.ts
src/model/: factory.ts  schema.ts  types.ts
src/platform/: index.ts  tauriStore.ts
src/renderer/: ChartView.tsx  ElementView.tsx  SlideStage.tsx  TableView.tsx  assets.ts  useStageScale.ts
src/store/: editorStore.ts  settingsStore.ts
src/types/: mammoth-browser.d.ts
(+15 files in other folders)
